# claude2api

./: .gitignore  .gitmodules  CLAUDE.md  README.md  README_cn.md
extension/: background.js  content.js  manifest.json  popup.html  popup.js
server/: main.py  requirements.txt  wechat_bot.py
wechatbot/: .gitignore  README.EN.MD  README.md  install.ps1  install.sh
wechatbot/.github/workflows/: ci.yml  publish-crate.yml  publish-npm.yml  publish-pi-agent.yml  publish-pypi.yml  release-binaries.yml
wechatbot/.pi/skills/publish/: SKILL.md
wechatbot/golang/: README.md  bot.go  bot_test.go  types.go
wechatbot/golang/internal/auth/: login.go
wechatbot/golang/internal/crypto/: aes.go  aes_test.go
wechatbot/golang/internal/protocol/: api.go
wechatbot/nodejs/: README.md  package.json  tsconfig.json
wechatbot/nodejs/examples/: echo-bot.ts  media-bot.ts  middleware-bot.ts  send-image-test.ts
wechatbot/nodejs/src/: index.ts
wechatbot/nodejs/tests/: crypto.test.ts  events.test.ts  markdown.test.ts  middleware.test.ts  mime.test.ts  parser.test.ts  sender.test.ts  storage.test.ts
wechatbot/pi-agent/: package.json  tsconfig.json
wechatbot/pi-agent/src/: index.ts  qrcode-terminal.d.ts
wechatbot/python/: README.md  pyproject.toml
wechatbot/python/tests/: test_client.py  test_crypto.py
wechatbot/python/wechatbot/: auth.py  client.py  protocol.py  types.py
wechatbot/rust/: Cargo.toml  README.md
wechatbot/rust/examples/: echo_bot.rs
wechatbot/rust/src/: bot.rs  cdn.rs  crypto.rs  error.rs  lib.rs  protocol.rs  types.rs
(+42 files in other folders)
