[project]
name = "wechatbot-sdk"
version = "0.2.1"
description = "WeChat iLink Bot SDK for Python — async, typed, production-grade"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["wechatbot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
